<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.c22ps305team.saferoute.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.c22ps305team.saferoute.ui.main.location.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.c22ps305team.saferoute.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>