<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filterBsContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top_corner"
    android:paddingBottom="100dp">

    <ImageButton
        android:id="@+id/btnCloseFilterBottomSheet"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_cross"
        app:layout_constraintBottom_toBottomOf="@+id/tvFilterTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvFilterTitle" />

    <FrameLayout
        android:id="@+id/selectCentroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFilterTitle">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="80dp"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="20dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:id="@+id/ivSelectCentroid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_menu_centroid" />

        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/selectArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectCentroid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/selectCentroid">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="80dp"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="20dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:id="@+id/ivSelectArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_menu_tiling" />

        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <TextView
        android:id="@+id/tvFilterTitle"
        style="@style/Text.Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/chose_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDangerArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/danger_area"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/selectCentroid"
        app:layout_constraintStart_toStartOf="@+id/selectCentroid"
        app:layout_constraintTop_toBottomOf="@+id/selectCentroid" />

    <TextView
        android:id="@+id/tvDistrictsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/districts_info"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/selectArea"
        app:layout_constraintStart_toStartOf="@+id/selectArea"
        app:layout_constraintTop_toBottomOf="@+id/selectArea" />

</androidx.constraintlayout.widget.ConstraintLayout>